// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product component hover overlay should render quicklook button style with hidden state 1`] = `
.c0 {
  display: none;
  position: absolute;
  left: 0;
  bottom: 0rem;
  width: 100%;
}

<div
  className="c0"
/>
`;

exports[`Product component hover overlay should render quicklook button style with shown state 1`] = `
.c0 {
  display: block;
  position: absolute;
  left: 0;
  bottom: 0rem;
  width: 100%;
}

<div
  className="c0"
/>
`;

exports[`Product component should render 1`] = `
<styled.a
  href="/details/belgian-linen-embroidery-duvet-cover-shams-slate-white-b3024"
>
  <styled.div
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  >
    <styled.img
      alt="Belgian Linen Ladder Stripe Embroidery Duvet Cover &amp; Shams - Slate/White"
      src="https://www.westelm.com/weimgs/ab/images/wcm/products/202003/0005/belgian-linen-ladder-stripe-embroidery-duvet-cover-shams-s-m.jpg"
    />
    <styled.div
      show={false}
    >
      <Modal
        modalContent={
          <ProductAssets
            compact={true}
            hero={
              Object {
                "alt": "",
                "height": 363,
                "href": "https://www.westelm.com/weimgs/ab/images/wcm/products/202003/0005/belgian-linen-ladder-stripe-embroidery-duvet-cover-shams-s-m.jpg",
                "meta": "",
                "rel": "hero",
                "size": "m",
                "width": 363,
              }
            }
            images={
              Array [
                Object {
                  "alt": "",
                  "height": 363,
                  "href": "https://www.westelm.com/weimgs/ab/images/wcm/products/202003/0005/belgian-linen-ladder-stripe-embroidery-duvet-cover-shams-6-m.jpg",
                  "meta": "",
                  "rel": "althero",
                  "size": "m",
                  "width": 363,
                },
                Object {
                  "alt": "",
                  "height": 363,
                  "href": "https://www.westelm.com/weimgs/ab/images/wcm/products/202003/0012/belgian-linen-ladder-stripe-embroidery-duvet-cover-shams-m.jpg",
                  "meta": "",
                  "rel": "althero",
                  "size": "m",
                  "width": 363,
                },
              ]
            }
            name="Belgian Linen Ladder Stripe Embroidery Duvet Cover & Shams - Slate/White"
          />
        }
        modalProps={
          Object {
            "triggerText": "Quicklook",
          }
        }
      />
    </styled.div>
  </styled.div>
  <styled.p>
    Belgian Linen Ladder Stripe Embroidery Duvet Cover & Shams - Slate/White
  </styled.p>
  <styled.span>
    $44 - $329
  </styled.span>
</styled.a>
`;
